@@ -7,6 +7,8 @@ using `glibc' in the "product" field.
 
 The following bugs are resolved with this release:
 
+  [26224] iconv hangs when converting some invalid inputs from several IBM
+    character sets (CVE-2020-27618)
   [26534] libm.so 2.32 SIGILL in pow() due to FMA4 instruction on non-FMA4
     system
   [26555] string: strerrorname_np does not return the documented value
@@ -198,6 +200,10 @@ Security related changes:
   memmove functions has been fixed.  Discovered by Jason Royes and Samual
   Dytrych of the Cisco Security Assessment and Penetration Team (See
   TALOS-2020-1019).
+
+  CVE-2020-27618: An infinite loop has been fixed in the iconv program when
+  invoked with input containing redundant shift sequences in the IBM1364,
+  IBM1371, IBM1388, IBM1390, or IBM1399 character sets.
 
 The following bugs are resolved with this release:
 
